Revision history for HTTP-Message

{{$NEXT}}
    - Made the Clone module a hard requirement, so we don't have to
      provide a fallback function for HTTP::Headers::clone().
      We require at least Clone 0.46, as that release now supports
      Perl back to 5.8.1, just like us. (GH#64) (Neil Bowers)

6.43      2022-10-22 14:50:35Z
    - Remove dependency to IO::Uncompress::Bunzip2. (Michal Josef Spacek)
    - Remove dependency to IO::Uncompress::Gunzip. (Michal Josef Spacek)

6.42      2022-10-18 13:53:22Z
    - We now don't consider the Content-Location header when asked
      for the base URI. RFC 7231 says we shouldn't. (GH#51) (Neil Bowers)
    - Increased the (max) buffer size for read() when processing form data,
      from 2048 to 8192. This was suggested in RT#105184, as it improved
      performance for them. (GH#59) (Neil Bowers)

6.41      2022-10-12 15:57:40Z
    - Add maximum size for HTTP::Message->decoded_content
      This can be used to limit the size of a decompressed HTTP response,
      especially when making requests to untrusted or user-specified servers.
      The $HTTP::Message::MAXIMUM_BODY_SIZE variable and the ->max_body_size
      accessor can set this limit. (GH#181) (Max Maischein)

6.40      2022-10-12 15:45:52Z
    - Fixed two typos in the doc, originally reported by FatherC
      in RT#90716, ported over as GH#57. (GH#57) (Neil Bowers)

6.39      2022-10-08 13:48:26Z
    - Remove Travis config (GH#180) (Olaf Alders)
    - Added status_constant_name() which maps status code
      to the name of the corresponding constant. (GH#160) (Neil Bowers)
    - Updated the doc for status_message() to clarify that it
      returns "Not Found" and not "HTTP_NOT_FOUND". (GH#160) (Neil Bowers)

6.38      2022-10-06 21:48:18Z
    - Replace "base" with "parent" (GH#176) (James Raspass)
    - Replace "print" with "note" in tests (GH#178) (James Raspass)
    - Noted that OPTIONS supported was added in 6.1, to the doc