@@ -19,7 +19,7 @@ my %WriteMakefileArgs = (
   "PREREQ_PM" => {
     "Carp" => 0,
     "Compress::Raw::Bzip2" => 0,
-    "Compress::Raw::Zlib" => 0,
+    "Compress::Raw::Zlib" => 2.062,
     "Encode" => "3.01",
     "Encode::Locale" => 1,
     "Exporter" => "5.57",
@@ -62,7 +62,7 @@ my %WriteMakefileArgs = (
 my %FallbackPrereqs = (
   "Carp" => 0,
   "Compress::Raw::Bzip2" => 0,
-  "Compress::Raw::Zlib" => 0,
+  "Compress::Raw::Zlib" => 2.062,
   "Encode" => "3.01",
   "Encode::Locale" => 1,
   "Exporter" => "5.57",
