@@ -5,6 +5,8 @@ Revision history for HTTP-Message
       provide a fallback function for HTTP::Headers::clone().
       We require at least Clone 0.46, as that release now supports
       Perl back to 5.8.1, just like us. (GH#64) (Neil Bowers)
+    - Made the Compress::Raw::Zlib 2.062 module minimal required
+      version. (GH190) (Jakub 'q84fh' Skory)
 
 6.43      2022-10-22 14:50:35Z
     - Remove dependency to IO::Uncompress::Bunzip2. (Michal Josef Spacek)
